// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders permalink view 1`] = `
<div
  className="Flex-root App-root Flex-flex Flex-justifyCenter"
>
  <div
    className="PermalinkView-root"
  >
    <a
      className="BaseButton-root Button-root PermalinkView-button Button-sizeRegular Button-colorPrimary Button-variantOutlined Button-fullWidth"
      href="http://localhost/"
      id="talk-comments-permalinkView-showAllComments"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      target="_parent"
      type="button"
    >
      Show All Comments
    </a>
    <div
      className="ConversationThread-root"
    >
      <div
        className="Flex-root Flex-flex Flex-justifyCenter"
      >
        <h1
          className="Typography-root Typography-heading4 Typography-colorTextPrimary"
        >
          Converation Thread
        </h1>
      </div>
      <div
        className="Line-root"
      >
        <div
          className="HorizontalGutter-root HorizontalGutter-full"
        >
          <div
            className="Circle-circleContainer"
          >
            <div
              className="Circle-circleSubContainer"
            >
              <svg
                className="Circle-circle"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="50"
                  cy="50"
                  r="50"
                />
              </svg>
            </div>
            <div
              className="Flex-root Flex-flex Flex-justifySpaceBetween Flex-directionRow"
              id="comment-2"
            >
              <div
                className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
              >
                <span
                  className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                >
                  Isabelle
                </span>
                <div
                  className="Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow"
                >
                  <time
                    className="Timestamp-root RelativeTime-root"
                    dateTime="2018-07-06T18:14:00.000Z"
                    title="2018-07-06T18:14:00.000Z"
                  >
                    2018-07-06T18:14:00.000Z
                  </time>
                </div>
              </div>
            </div>
          </div>
          <button
            className="BaseButton-root Button-root Button-sizeRegular Button-colorRegular Button-variantRegular"
            disabled={false}
            id="comments-conversationThread-showHiddenComments"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            onTouchEnd={[Function]}
            type="button"
          >
            View previous comments
          </button>
          <div
            className="Circle-circleContainer"
          >
            <div
              className="Circle-circleSubContainer Circle-end"
            >
              <svg
                className="Circle-circle"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="50"
                  cy="50"
                  r="50"
                />
              </svg>
            </div>
            <div
              className="HorizontalGutter-root HorizontalGutter-full"
            >
              <div
                className="Indent-root"
              >
                <div
                  className=""
                >
                  <div
                    className="Comment-root"
                    role="article"
                  >
                    <div
                      className="Flex-root Comment-topBar Flex-flex Flex-justifySpaceBetween Flex-directionRow"
                      id="comment-comment-0"
                    >
                      <div
                        className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
                      >
                        <span
                          className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                        >
                          Markus
                        </span>
                        <div
                          className="Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow"
                        >
                          <time
                            className="Timestamp-root RelativeTime-root"
                            dateTime="2018-07-06T18:24:00.000Z"
                            title="2018-07-06T18:24:00.000Z"
                          >
                            2018-07-06T18:24:00.000Z
                          </time>
                        </div>
                      </div>
                    </div>
                    <div
                      className="HorizontalGutter-root HorizontalGutter-full"
                    >
                      <div
                        className="HTMLContent-root"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "Joining Too",
                          }
                        }
                      />
                      <div
                        className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
                      >
                        <button
                          className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                          id="comments-commentContainer-replyButton-comment-0"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseDown={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          type="button"
                        >
                          <span>
                            Reply
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="PermalinkView-replyList"
    />
  </div>
</div>
`;

exports[`views pervious comments 1`] = `
<div
  className="Flex-root App-root Flex-flex Flex-justifyCenter"
>
  <div
    className="PermalinkView-root"
  >
    <a
      className="BaseButton-root Button-root PermalinkView-button Button-sizeRegular Button-colorPrimary Button-variantOutlined Button-fullWidth"
      href="http://localhost/"
      id="talk-comments-permalinkView-showAllComments"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      target="_parent"
      type="button"
    >
      Show All Comments
    </a>
    <div
      className="ConversationThread-root"
    >
      <div
        className="Flex-root Flex-flex Flex-justifyCenter"
      >
        <h1
          className="Typography-root Typography-heading4 Typography-colorTextPrimary"
        >
          Converation Thread
        </h1>
      </div>
      <div
        className="Line-root"
      >
        <div
          className="HorizontalGutter-root HorizontalGutter-full"
        >
          <div
            className="Circle-circleContainer"
          >
            <div
              className="Circle-circleSubContainer"
            >
              <svg
                className="Circle-circle"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="50"
                  cy="50"
                  r="50"
                />
              </svg>
            </div>
            <div
              className="HorizontalGutter-root HorizontalGutter-full"
            >
              <div
                className="Indent-root"
              >
                <div
                  className=""
                >
                  <div
                    className="Comment-root"
                    role="article"
                  >
                    <div
                      className="Flex-root Comment-topBar Flex-flex Flex-justifySpaceBetween Flex-directionRow"
                      id="comment-comment-1"
                    >
                      <div
                        className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
                      >
                        <span
                          className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                        >
                          Lukas
                        </span>
                        <div
                          className="Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow"
                        >
                          <time
                            className="Timestamp-root RelativeTime-root"
                            dateTime="2018-07-06T18:20:00.000Z"
                            title="2018-07-06T18:20:00.000Z"
                          >
                            2018-07-06T18:20:00.000Z
                          </time>
                        </div>
                      </div>
                    </div>
                    <div
                      className="HorizontalGutter-root HorizontalGutter-full"
                    >
                      <div
                        className="HTMLContent-root"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "What's up?",
                          }
                        }
                      />
                      <div
                        className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
                      >
                        <button
                          className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                          id="comments-commentContainer-replyButton-comment-1"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseDown={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          type="button"
                        >
                          <span>
                            Reply
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="Circle-circleContainer"
          >
            <div
              className="Circle-circleSubContainer"
            >
              <svg
                className="Circle-circle"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="50"
                  cy="50"
                  fill="none"
                  r="40"
                  strokeWidth="8"
                />
              </svg>
            </div>
            <div
              className="HorizontalGutter-root HorizontalGutter-full"
            >
              <div
                className="Indent-root"
              >
                <div
                  className=""
                >
                  <div
                    className="Comment-root"
                    role="article"
                  >
                    <div
                      className="Flex-root Comment-topBar Flex-flex Flex-justifySpaceBetween Flex-directionRow"
                      id="comment-comment-2"
                    >
                      <div
                        className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
                      >
                        <span
                          className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                        >
                          Isabelle
                        </span>
                        <div
                          className="Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow"
                        >
                          <time
                            className="Timestamp-root RelativeTime-root"
                            dateTime="2018-07-06T18:14:00.000Z"
                            title="2018-07-06T18:14:00.000Z"
                          >
                            2018-07-06T18:14:00.000Z
                          </time>
                        </div>
                      </div>
                    </div>
                    <div
                      className="HorizontalGutter-root HorizontalGutter-full"
                    >
                      <div
                        className="HTMLContent-root"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "Hey!",
                          }
                        }
                      />
                      <div
                        className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
                      >
                        <button
                          className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                          id="comments-commentContainer-replyButton-comment-2"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseDown={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          type="button"
                        >
                          <span>
                            Reply
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="Circle-circleContainer"
          >
            <div
              className="Circle-circleSubContainer Circle-end"
            >
              <svg
                className="Circle-circle"
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="50"
                  cy="50"
                  r="50"
                />
              </svg>
            </div>
            <div
              className="HorizontalGutter-root HorizontalGutter-full"
            >
              <div
                className="Indent-root"
              >
                <div
                  className=""
                >
                  <div
                    className="Comment-root"
                    role="article"
                  >
                    <div
                      className="Flex-root Comment-topBar Flex-flex Flex-justifySpaceBetween Flex-directionRow"
                      id="comment-comment-0"
                    >
                      <div
                        className="Flex-root Flex-flex Flex-halfItemGutter Flex-alignBaseline Flex-directionColumn"
                      >
                        <span
                          className="Typography-root Typography-heading3 Typography-colorTextPrimary Username-root"
                        >
                          Markus
                        </span>
                        <div
                          className="Flex-root Flex-flex Flex-itemGutter Flex-alignBaseline Flex-directionRow"
                        >
                          <time
                            className="Timestamp-root RelativeTime-root"
                            dateTime="2018-07-06T18:24:00.000Z"
                            title="2018-07-06T18:24:00.000Z"
                          >
                            2018-07-06T18:24:00.000Z
                          </time>
                        </div>
                      </div>
                    </div>
                    <div
                      className="HorizontalGutter-root HorizontalGutter-full"
                    >
                      <div
                        className="HTMLContent-root"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "Joining Too",
                          }
                        }
                      />
                      <div
                        className="Flex-root Flex-flex Flex-halfItemGutter Flex-directionRow"
                      >
                        <button
                          className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
                          id="comments-commentContainer-replyButton-comment-0"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseDown={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                          onTouchEnd={[Function]}
                          type="button"
                        >
                          <span>
                            Reply
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="PermalinkView-replyList"
    />
  </div>
</div>
`;
